Fix Html and Body Height to not fit mobile screen devices

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,3 +1,7 @@
+html, body {
+  height: 100%;
+}
+
 body > div > div > div > div.login-form {
   height: 100%;
 }
